Template finished for desktop

--- a/WebApplication1/ClientApp/css/site.css
+++ b/WebApplication1/ClientApp/css/site.css
@@ -1,66 +1,134 @@
+﻿/* placeholder stuff */
+@import url("https://fonts.googleapis.com/css?family=Montserrat:300,400,700");
 .main-nav li .glyphicon {
-    margin-right: 10px;
-}
+  margin-right: 10px; }
 
+/* test */
 /* Highlighting rules for nav menu items */
 .main-nav li a.active,
 .main-nav li a.active:hover,
 .main-nav li a.active:focus {
-    background-color: #4189C7;
-    color: white;
-}
+  background-color: #4189C7;
+  color: white; }
 
 /* Keep the nav menu independent of scrolling and on top of other items */
 .main-nav {
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    z-index: 1;
-}
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 1; }
 
 @media (max-width: 767px) {
-    /* On small screens, the nav menu spans the full width of the screen. Leave a space for it. */
-    body {
-        padding-top: 50px;
-    }
-}
+  /* On small screens, the nav menu spans the full width of the screen. Leave a space for it. */
+  body {
+    padding-top: 50px; } }
 
 @media (min-width: 768px) {
-    /* On small screens, convert the nav menu to a vertical sidebar */
-    .main-nav {
-        height: 100%;
-        width: calc(25% - 20px);
-    }
-    .main-nav .navbar {
-        border-radius: 0px;
-        border-width: 0px;
-        height: 100%;
-    }
-    .main-nav .navbar-header {
-        float: none;
-    }
-    .main-nav .navbar-collapse {
-        border-top: 1px solid #444;
-        padding: 0px;
-    }
-    .main-nav .navbar ul {
-        float: none;
-    }
-    .main-nav .navbar li {
-        float: none;
-        font-size: 15px;
-        margin: 6px;
-    }
-    .main-nav .navbar li a {
-        padding: 10px 16px;
-        border-radius: 4px;
-    }
-    .main-nav .navbar a {
-        /* If a menu item's text is too long, truncate it */
-        width: 100%;
-        white-space: nowrap;
-        overflow: hidden;
-        text-overflow: ellipsis;
-    }
-}
+  /* On small screens, convert the nav menu to a vertical sidebar */
+  .main-nav {
+    height: 100%;
+    width: calc(25% - 20px); }
+  .main-nav .navbar {
+    border-radius: 0px;
+    border-width: 0px;
+    height: 100%; }
+  .main-nav .navbar-header {
+    float: none; }
+  .main-nav .navbar-collapse {
+    border-top: 1px solid #444;
+    padding: 0px; }
+  .main-nav .navbar ul {
+    float: none; }
+  .main-nav .navbar li {
+    float: none;
+    font-size: 15px;
+    margin: 6px; }
+  .main-nav .navbar li a {
+    padding: 10px 16px;
+    border-radius: 4px; }
+  .main-nav .navbar a {
+    /* If a menu item's text is too long, truncate it */
+    width: 100%;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis; } }
+
+/* done placeholder stuff */
+html {
+  font-size: 14px; }
+
+body {
+  font-size: 1em;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 400;
+  line-height: 1.45;
+  font-family: 'Montserrat', sans-serif;
+  color: #222; }
+  body p {
+    margin-bottom: 1.3em; }
+  body h1, body h2, body h3, body h4 {
+    margin: 1.414em 0;
+    font-weight: inherit;
+    line-height: 1.2; }
+  body h1 {
+    margin-top: 0;
+    font-size: 3.998em; }
+  body h2 {
+    font-size: 2.827em; }
+  body h3 {
+    font-size: 1.999em; }
+  body h4 {
+    font-size: 1.414em; }
+  body small, body .font_small {
+    font-size: 0.707em; }
+  body h1, body h2, body h3, body h4, body h5, body h6 {
+    color: #222; }
+  body h3 {
+    font-weight: 600; }
+
+#react-app .container-fluid {
+  padding-left: 0;
+  padding-right: 0; }
+
+.app-container .b-shadow {
+  box-shadow: 0 0 6px rgba(0, 0, 0, 0.4); }
+
+.app-container .s-bg {
+  position: absolute;
+  z-index: -1; }
+
+.app-container .v-bg {
+  width: 100%; }
+
+.app-container > div {
+  overflow: hidden;
+  position: relative; }
+
+.app-container .s1 .s-content {
+  text-align: center; }
+
+.app-container .s1 h3 {
+  margin: 40px 0 20px; }
+
+.app-container .s2 {
+  overflow: visible; }
+  .app-container .s2 .s-content {
+    max-width: 1150px; }
+  .app-container .s2 .hover-right {
+    top: -150px;
+    right: 50px;
+    position: absolute; }
+
+.app-container .s3 .negative-margin {
+  margin-top: -100px;
+  margin-bottom: -100px; }
+
+.app-container .s3 .offset-v {
+  position: relative;
+  bottom: 120px; }
+
+@media (min-width: 768px) {
+  .app-container .s-content {
+    padding: 130px 200px; } }
+
